--- a/index.html
+++ b/index.html
@@ -1,1 +1,23 @@
-<img src="http://sucasaprops.wpengine.com/landing_page/VillageGate_ComingSoonImage.png" />
+<!DOCTYPE html>
+<html>
+
+<style>
+
+.displayed {
+
+    display: block;
+
+    margin-left: auto;
+
+    margin-right: auto;}
+
+</style>
+
+<body>
+
+<IMG class="displayed" src="http://sucasaprops.wpengine.com/landing_page/VillageGate_ComingSoonImage.png" alt="villagegate logo">
+
+</body>
+
+</html>
+
